Cache reuse of server-wide stats, fixed footer, trimming string
- The server-wide statistics now checks for results from other users if cache is enabled
- The input string when searching now removes spaces at the beginning and the end
- The footer no longer overlaps other elements

--- a/assets/css/wrapped.css
+++ b/assets/css/wrapped.css
@@ -85,7 +85,7 @@ img {
 .content_landing {
     width: 100%;
     margin: 0;
-    height: 95%;
+    height: auto;
     box-sizing: border-box;
 }
 
